# percept

./: .gitignore  CMakeLists.txt  Jamfile  LICENSE  README.md  percept_github_nightly.sh
build-cmake/: .gitignore  README  VERSION  build-tpls.sh  get-tpls.sh  hex8-ref.e  hex8-ref.e.3.0  hex8-ref.e.3.1  hex8-ref.e.3.2  hex8.e  mesh-adapt-help.txt  module-file  percept-clean-config-files  sample-cgns-release.config  sample-gtest-release.config  sample-percept-debug.config  sample-percept-lite-release.config  sample-percept-release.config  sample-trilinos-debug.config  sample-trilinos-release.config  setup.sh  superlu-make-inc  test-version.sh  trilinos-clean-config-files  version-info.txt
cmake/: Dependencies.cmake
doc/: PerceptMesh.html
mms/: Jamfile
mms/mms/: mms.cpp  mms.hpp
mms/regression_tests/: RegressionTestMMS.cpp  RegressionTestMain.cpp
mms/unit_tests/: UnitTestMMS.cpp
percept/: CMakeLists.txt
percept_lite/: Jamfile
release_notes/: 4.38_release_notes.txt
src/adapt/: AdaptHelperFunctions.hpp  AdaptedMeshVerifier.cpp  AdaptedMeshVerifier.hpp  Allocate.cpp  BlockRefiner.hpp  BoundingRegion.cpp  BoundingRegion.hpp  Colorer.cpp  Colorer.hpp  DiscretizeHex.hpp  DiscretizePyr.hpp  DiscretizeWedge.hpp  ElementRefinePredicate.cpp  ElementRefinePredicate.hpp  FindValidCentroid.cpp  FindValidCentroid.hpp  FixSideSets.cpp  FixSideSets.hpp  FixSideSetsSelector.hpp  HangingNodeAdapter.cpp  HangingNodeAdapter.hpp  IAdapter.hpp  IEdgeAdapter.cpp  IEdgeAdapter.hpp  IEdgeBasedAdapterPredicate.hpp  IElementAdapter.cpp  IElementAdapter.hpp  IElementBasedAdapterPredicate.hpp  NIDQuantum.hpp  NodeIdsOnSubDimEntityType.hpp  NodeRegistry.cpp  NodeRegistry.hpp  NodeRegistryDef.hpp  NodeRegistryType.hpp  NodeRegistry_KOKKOS.cpp  NodeRegistry_KOKKOS.hpp  Percept_MOAB_SimplexTemplateRefiner.cpp  Percept_MOAB_SimplexTemplateRefiner.hpp  PredicateBasedEdgeAdapter.hpp  PredicateBasedElementAdapter.hpp  (+96 more)
src/adapt/main/: AdaptMain.cpp  AdaptMain.hpp  MemoryMultipliers.hpp  MeshAdapt.cpp  MeshAdapt.hpp  MeshAdaptMemberVarInit.hpp  RunAdaptRun.hpp  Test11.cpp
src/adapt/markers/: Marker.cpp  Marker.hpp  MarkerInterval.cpp  MarkerInterval.hpp  MarkerPhysicallyBased.cpp  MarkerPhysicallyBased.hpp  MarkerUsingErrIndFraction.cpp  MarkerUsingErrIndFraction.hpp
src/adapt/sierra_element/: CellTopology.cpp  CellTopology.hpp  GeneratedRefinementTable.hpp  MeshObjTopology.hpp  RefinementKey.cpp  RefinementKey.hpp  RefinementTopology.cpp  RefinementTopology.hpp  StdMeshObjTopologies.cpp  StdMeshObjTopologies.hpp  percept_code_types.hpp
src/ngp/: StructuredMeshKernel.hpp  UnitTestKokkosMain.cpp  simple_mesh_adapt_unstructured_FUNCTORS_cuda.cpp  simple_mesh_adapt_unstructured_FUNCTORS_cuda_coloring.cpp  simple_mesh_adapt_unstructured_lambdas.cpp
src/ngp/no_gtest_tests/: kokkosTest_without_gtest.cpp
src/percept/: BlockStructuredGrid.cpp  BlockStructuredGrid.hpp  CMakeLists.txt  DihedralAngleCheck.cpp  DihedralAngleCheck.hpp  Edge.hpp  ExceptionWatch.hpp  FieldBLAS.hpp  FieldTypes.hpp  GeometryVerifier.cpp  GeometryVerifier.hpp  HistogramV.hpp  Histograms.hpp  Intrepid_HGRAD_HEX_C2_Serendipity_FEM.hpp  Intrepid_HGRAD_HEX_C2_Serendipity_FEMDef.hpp  Intrepid_HGRAD_QUAD_C2_Serendipity_FEM.hpp  Intrepid_HGRAD_QUAD_C2_Serendipity_FEMDef.hpp  Intrepid_HGRAD_WEDGE_C2_Serendipity_FEM.hpp  Intrepid_HGRAD_WEDGE_C2_Serendipity_FEMDef.hpp  MeshType.cpp  MeshType.hpp  MeshUtil.cpp  MeshUtil.hpp  Name.hpp  NoMallocArray.hpp  Observable.hpp  OptionMask.hpp  PEncr_RecoverUtilities.cpp  PEncr_RecoverUtilities.hpp  PEnums.hpp  ParallelUtil.hpp  ParallelUtilDef.hpp  Percept.hpp  PerceptBoostArray.hpp  PerceptMesh.cpp  PerceptMesh.hpp  PerceptMeshReadWrite.hpp  PerceptUtils.cpp  PerceptUtils.hpp  PrintMacros.hpp  (+26 more)
src/percept/eigen_verify/: EigenVerify.cpp  EigenVerify.hpp  EigenVerifyMain.cpp
test/heavy_tests/: HeavyTestLocalRefiner.cpp  HeavyTestMain.cpp  HeavyTestMeshSmoother.cpp  HeavyTestNorm.cpp  HeavyTestRunAdaptRun.cpp  HeavyTestUniformRefiner.cpp  SGridSmootherMultiBlockvsSingleBlock.cpp  kokkos_misuse_bugs_isolation.hpp
test/regression_tests/: BlockRefiner.hpp  HeavyTestLocalRefiner.cpp  HeavyTestMeshSmoother.cpp  HeavyTestNorm.cpp  HeavyTestRunAdaptRun.cpp  HeavyTestUniformRefiner.cpp  RegressionTestExampleLocalRefine.cpp  RegressionTestExampleLocalRefine.hpp  RegressionTestFileLoc.hpp  RegressionTestLocalRefiner.cpp  RegressionTestLocalRefiner.hpp  RegressionTestMain.cpp  RegressionTestMeshColorer.cpp  RegressionTestNodeRegistry.cpp  RegressionTestPerceptCGNS.cpp  RegressionTestPerceptCGNSWithGeom.cpp  RegressionTestPerceptMeshFieldFunction.cpp  RegressionTestRefineACIS.cpp  RegressionTestRefineSideset.cpp  RegressionTestRefineSideset.cpp~  RegressionTestRespectSpacing.cpp  RegressionTestSTKMeshMemory.cpp  RegressionTestUniformRefiner.cpp  SGridSmootherMultiBlockvsSingleBlock.cpp  kokkos_misuse_bugs_isolation.hpp
test/unit_tests/: Documentation.hpp  Example2.py  FieldFunctionUnitTests.py  NormUnitTests.py  PerceptMeshUnitTests.py  StringFunctionUnitTests.py  TestLocalRefiner.cpp  TestLocalRefiner.hpp  TestLocalRefinerTet_N_1.hpp  TestLocalRefinerTet_N_2.hpp  TestLocalRefinerTet_N_2_1.hpp  TestLocalRefinerTet_N_3.hpp  TestLocalRefinerTet_N_3_1.cpp  TestLocalRefinerTet_N_3_1.hpp  TestLocalRefinerTet_N_4.hpp  TestLocalRefinerTri.cpp  TestLocalRefinerTri.hpp  TestLocalRefinerTri1.cpp  TestLocalRefinerTri1.hpp  TestLocalRefinerTri2.cpp  TestLocalRefinerTri2.hpp  TestLocalRefinerTri_N.cpp  TestLocalRefinerTri_N.hpp  TestLocalRefinerTri_N_1.cpp  TestLocalRefinerTri_N_1.hpp  TestLocalRefinerTri_N_2.cpp  TestLocalRefinerTri_N_2.hpp  TestLocalRefinerTri_N_3.hpp  TestLocalRefinerTri_N_3_EdgeBasedAnisotropic.hpp  TestLocalRefinerTri_N_3_IEdgeAdapter.hpp  TestLocalRefinerTri_N_3_IElementAdapter.hpp  TestLocalRefinerTri_N_3_MeshSizeRatio.hpp  TestLocalRefinerTri_N_4_IEdgeAdapter.hpp  UniformRefinerUnitTests.py  UnitTestAdaptHexRefine.cpp  UnitTestFieldFunction.cpp  UnitTestGenerateParallelConsistentIDs.cpp  UnitTestGeometryVerifier.cpp  UnitTestJacobianUtil.cpp  UnitTestLocalRefiner.cpp  (+28 more)
(+208 files in other folders)
